jQuery select - fixed text overflow for current value; smaller spacing between values in dropdown

--- a/components/form/form.mixins.less
+++ b/components/form/form.mixins.less
@@ -312,7 +312,7 @@
 					display: block;
 					.lui.form.item.value.select();
 					padding-left: 13px;
-					padding-right: 45px;
+					padding-right: 30px;
 					cursor: pointer;
 					
 					
@@ -340,6 +340,7 @@
 					}
 					
 					& > .ui-selectmenu-text {
+						display: block;
 						white-space: nowrap;
 						overflow: hidden;
 						text-overflow: ellipsis;
@@ -383,7 +384,7 @@
 								& > li {
 									display: block;
 									max-width: 100%;
-									padding: 10px 13px;
+									padding: 5px 13px;
 									font-size: 13px;
 									cursor: pointer;
 									white-space: normal;
